Agregado logo shopping

--- a/index.html
+++ b/index.html
@@ -151,6 +151,19 @@
             .img-hace-cambio { margin-bottom: 40px; }
             .custom-card { padding: 25px; }
         }
+        .img-mendoza-shopping {
+            max-width: 200px; /* Ajusta este tamaño según prefieras */
+            height: auto;
+            margin-top: -30px; /* Para que suba un poco hacia el texto principal */
+            opacity: 0.9;
+        }
+
+        /* Ajustamos el margen del texto de arriba para que no quede todo tan pegado */
+        .img-hace-cambio {
+            max-width: 85%;
+            height: auto;
+            margin-bottom: 40px; /* Reducimos un poco este margen para que entre el logo */
+        }
     </style>
 </head>
 <body>
@@ -163,12 +176,21 @@
             </div>
         </header>
 
+        <!-- 2. Sección Hero (Texto, Logo Shopping y Autos) -->
         <main class="hero-container container">
             <div class="row">
                 <div class="col-12">
+                    <!-- Texto PNG "Hacé el Cambio" -->
                     <img src="hace-el-cambio.png" alt="Hacé el Cambio" class="img-hace-cambio">
                 </div>
+                
+                <!-- NUEVO: Logo Mendoza Shopping -->
+                <div class="col-12 mb-5">
+                    <img src="logo-mendoza-shopping_blanco.png" alt="Mendoza Shopping" class="img-mendoza-shopping">
+                </div>
+
                 <div class="col-12">
+                    <!-- Autos PNG -->
                     <img src="autos.png" alt="Cronos y 208" class="img-autos">
                 </div>
             </div>
@@ -212,7 +234,7 @@
             <!-- Texto Legal -->
             <div class="legal-text">
                 <p>
-                    Promoción válida en la República Argentina desde el [Fecha Inicio] al [Fecha Fin] o hasta agotar stock de 10 unidades, lo que ocurra primero. 
+                    Promoción válida en la República Argentina desde el hasta agotar stock de 10 unidades, lo que ocurra primero. 
                     Las imágenes de los vehículos son de carácter ilustrativo y no contractuales, pudiendo variar versiones y equipamiento. 
                     La bonificación del 50% aplica exclusivamente a la primera cuota de planes de ahorro seleccionados. 
                     Consulte bases, condiciones y financiación en nuestro stand comercial. Martin Co. no garantiza la adjudicación inmediata. 
