--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
             .custom-card { padding: 25px; }
         }
         .img-mendoza-shopping {
-            max-width: 200px; /* Ajusta este tamaño según prefieras */
+            max-width: 100px;
             height: auto;
-            margin-top: -30px; /* Para que suba un poco hacia el texto principal */
+            margin-top: -40px;
+            margin-bottom: -50px;
             opacity: 0.9;
         }
 
