cambio en legales

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <!-- Texto Legal -->
             <div class="legal-text">
                 <p>
-                    Promoción válida en la República Argentina desde el hasta agotar stock de 10 unidades, lo que ocurra primero. 
+                    Promoción válida hasta agotar stock de 10 unidades.
                     Las imágenes de los vehículos son de carácter ilustrativo y no contractuales, pudiendo variar versiones y equipamiento. 
                     La bonificación del 50% aplica exclusivamente a la primera cuota de planes de ahorro seleccionados. 
                     Consulte bases, condiciones y financiación en nuestro stand comercial. Martin Co. no garantiza la adjudicación inmediata. 
