--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- SEO Básico -->
     <title>Martin Co | Hacé el Cambio</title>
+    <meta name="description" content="Encontrá tu próximo vehículo con el asesoramiento exclusivo de Martin Co. Consultá por disponibilidad de modelos y opciones de financiación personalizadas.">
+    <meta name="keywords" content="Martin Co, Fiat, Peugeot, Automotores, Mendoza Shopping, Financiación, Autos">
+    <meta name="author" content="Martin Co">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph (Para compartir por WhatsApp, Facebook e Instagram) -->
+    <meta property="og:title" content="Martin Co | Hacé el Cambio">
+    <meta property="og:description" content="Consultá por tu próximo vehículo con el asesoramiento exclusivo de Martin Co.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://formulario.martinco.com.ar/">
+    <!-- Nota: La imagen de abajo es la que aparecerá en la "card" de WhatsApp -->
+    <meta property="og:image" content="ogg.png">
+
+    <!-- Favicon (El ícono que aparece en la pestaña del navegador) -->
+    <link rel="icon" type="image/png" href="favicon.ico"> <!-- Asegurate de subir un favicon.png a tu repo -->
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
