--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://formulario.martinco.com.ar/">
     <!-- Nota: La imagen de abajo es la que aparecerá en la "card" de WhatsApp -->
-    <meta property="og:image" content="ogg.png">
+    <meta property="og:image" content="ogg.jpg">
 
     <!-- Favicon (El ícono que aparece en la pestaña del navegador) -->
     <link rel="icon" type="image/png" href="favicon.ico"> <!-- Asegurate de subir un favicon.png a tu repo -->
