--- a/index.html
+++ b/index.html
@@ -537,15 +537,13 @@
         };
 
         try {
-          let r = await fetch(
-            "https://hooks.zapier.com/hooks/catch/1997286/uea8m3w/",
-            {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify(payload),
+          let r = await fetch("lead-zapier.php", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
             },
-          );
-
+            body: JSON.stringify(payload),
+          });
           if (!r.ok) throw new Error();
 
           Swal.fire({
