--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         };
 
         try {
-          let r = await fetch("lead-zapier.php", {
+          let r = await fetch("api.php", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
