--- a/index.html
+++ b/index.html
@@ -182,6 +182,71 @@
             height: auto;
             margin-bottom: 40px; /* Reducimos un poco este margen para que entre el logo */
         }
+
+        /* Estilos para el selector visual de autos */
+        .model-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr); /* 2 columnas en móvil */
+            gap: 10px;
+            margin-bottom: 20px;
+            max-height: 400px; /* Limita la altura para que no sea infinito */
+            overflow-y: auto; /* Agrega scroll interno si hay muchos autos */
+            padding: 10px;
+            border: 1px solid #ddd;
+            background: #fff;
+        }
+
+        .model-option {
+            cursor: pointer;
+            text-align: center;
+        }
+
+        .model-option input {
+            display: none; /* Escondemos el radio button real */
+        }
+
+        .model-card {
+            border: 2px solid #eee;
+            padding: 10px;
+            transition: 0.3s;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .model-card img {
+            width: 100%;
+            height: auto;
+            margin-bottom: 5px;
+        }
+
+        .model-card span {
+            font-size: 0.75rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            color: #333;
+        }
+
+        .model-card small {
+            display: block;
+            font-size: 0.65rem;
+            color: #666;
+        }
+
+        /* Efecto cuando se selecciona un auto */
+        .model-option input:checked + .model-card {
+            border-color: var(--lila);
+            background-color: rgba(75, 16, 152, 0.05);
+        }
+
+        /* Scrollbar personalizado para que no quede feo */
+        .model-grid::-webkit-scrollbar { width: 5px; }
+        .model-grid::-webkit-scrollbar-thumb { background: var(--lila); }
+
+        @media (min-width: 768px) {
+            .model-grid { grid-template-columns: repeat(3, 1fr); } /* 3 columnas en desktop */
+        }
     </style>
 </head>
 <body>
@@ -218,18 +283,132 @@
             <div class="custom-card">
                 <h2>Pedí más información</h2>
                 <form action="procesar.php" method="POST">
+                    <!-- Datos Personales -->
                     <input type="text" name="nombre" class="form-control" placeholder="Nombre y Apellido" required>
                     <input type="email" name="email" class="form-control" placeholder="Email" required>
                     <input type="tel" name="telefono" class="form-control" placeholder="WhatsApp / Teléfono" required>
                     
-                    <select name="tiene_auto" id="tiene_auto" class="form-select" required onchange="toggleModelo()">
-                        <option value="" selected disabled>¿Tenés un vehículo actualmente?</option>
-                        <option value="si">Sí, tengo un auto</option>
-                        <option value="no">No, no tengo</option>
-                    </select>
+                    <label class="form-label fw-bold mb-2">Seleccioná el modelo de tu interés:</label>
+                    
+                    <div class="model-grid">
+                        <!-- SECCIÓN FIAT -->
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="fiat_cronos" checked>
+                            <div class="model-card">
+                                <img src="fiat-cronos.png" alt="Cronos">
+                                <span>Fiat</span>
+                                <small>Cronos</small>
+                            </div>
+                        </label>
 
-                    <div id="contenedor-modelo">
-                        <input type="text" name="modelo_actual" class="form-control" placeholder="Año y Modelo de tu vehículo">
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="fiat_pulse">
+                            <div class="model-card">
+                                <img src="fiat-pulse.png" alt="Pulse">
+                                <span>Fiat</span>
+                                <small>Pulse</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="fiat_strada">
+                            <div class="model-card">
+                                <img src="fiat-strada.png" alt="Strada">
+                                <span>Fiat</span>
+                                <small>Strada</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="fiat_toro">
+                            <div class="model-card">
+                                <img src="fiat-toro.png" alt="Toro">
+                                <span>Fiat</span>
+                                <small>Toro</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="fiat_fastback">
+                            <div class="model-card">
+                                <img src="fiat-fastback.png" alt="Fastback">
+                                <span>Fiat</span>
+                                <small>Fastback</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="fiat_mobi">
+                            <div class="model-card">
+                                <img src="fiat-mobi.png" alt="Mobi">
+                                <span>Fiat</span>
+                                <small>Mobi</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="fiat_argo">
+                            <div class="model-card">
+                                <img src="fiat-argo.png" alt="Argo">
+                                <span>Fiat</span>
+                                <small>Argo</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="fiat_titano">
+                            <div class="model-card">
+                                <img src="fiat-titano.png" alt="Titano">
+                                <span>Fiat</span>
+                                <small>Titano</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="fiat_fiorino">
+                            <div class="model-card">
+                                <img src="fiat-fiorino.png" alt="Fiorino">
+                                <span>Fiat</span>
+                                <small>Fiorino</small>
+                            </div>
+                        </label>
+
+                        <!-- SECCIÓN PEUGEOT -->
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="peugeot_208">
+                            <div class="model-card">
+                                <img src="peugeot-208.png" alt="208">
+                                <span>Peugeot</span>
+                                <small>Nuevo 208</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="peugeot_2008">
+                            <div class="model-card">
+                                <img src="peugeot-2008.png" alt="2008">
+                                <span>Peugeot</span>
+                                <small>Nuevo 2008</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="peugeot_partner">
+                            <div class="model-card">
+                                <img src="peugeot-partner.png" alt="Partner">
+                                <span>Peugeot</span>
+                                <small>Partner</small>
+                            </div>
+                        </label>
+
+                        <label class="model-option">
+                            <input type="radio" name="modelo_interes" value="peugeot_expert">
+                            <div class="model-card">
+                                <img src="peugeot-expert.png" alt="Expert">
+                                <span>Peugeot</span>
+                                <small>Expert</small>
+                            </div>
+                        </label>
                     </div>
 
                     <button type="submit" class="btn btn-enviar">Quiero mi beneficio</button>
